[package]
name = "grok-wgpu2"
version = "0.1.0"
edition = "2018"
# New feature resolver is needed by wgpu
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.11", features = ["trace"] }
# wgpu = { git = "https://github.com/gfx-rs/wgpu.git", branch="master" }
pollster = "0.2"

